@@ -128,26 +128,25 @@ main(int argc, char *argv[])
    D_RETURN(3, 0);
 }
 
-gboolean mainwin_delete_cb(GtkWidget * widget, GdkEvent * event,
-                           gpointer user_data)
+gboolean
+mainwin_delete_cb(GtkWidget * widget, GdkEvent * event, gpointer user_data)
 {
    D_ENTER(3);
    gtk_exit(0);
    D_RETURN(3, FALSE);
 }
-
-gboolean mainwin_destroy_cb(GtkWidget * widget, GdkEvent * event,
-                            gpointer user_data)
-{
-   D_ENTER(3);
-   gtk_exit(0);
-   D_RETURN(3, FALSE);
-}
-
 
 gboolean
-configure_cb(GtkWidget * widget, GdkEventConfigure * event,
-             gpointer user_data)
+mainwin_destroy_cb(GtkWidget * widget, GdkEvent * event, gpointer user_data)
+{
+   D_ENTER(3);
+   gtk_exit(0);
+   D_RETURN(3, FALSE);
+}
+
+
+gboolean configure_cb(GtkWidget * widget, GdkEventConfigure * event,
+                      gpointer user_data)
 {
    D_ENTER(3);
 
@@ -156,8 +155,7 @@ configure_cb(GtkWidget * widget, GdkEventConfigure * event,
    D_RETURN(3, TRUE);
 }
 
-gint
-evbox_buttonpress_cb(GtkWidget * widget, GdkEventButton * event)
+gint evbox_buttonpress_cb(GtkWidget * widget, GdkEventButton * event)
 {
    geist_object *obj;
 
@@ -165,20 +163,38 @@ evbox_buttonpress_cb(GtkWidget * widget, GdkEventButton * event)
 
    if (event->button == 1)
    {
+      geist_list *l, *list;
+
+
       obj = geist_document_find_clicked_object(doc, event->x, event->y);
       if (!obj)
          D_RETURN(5, 1);
-      obj->clicked_x = event->x - obj->x;
-      obj->clicked_y = event->y - obj->y;
-      geist_document_unselect_all(doc);
-      D(2, ("setting object state SELECTED\n"));
-      geist_object_set_state(obj, SELECTED);
-      D(2, ("setting object state DRAG\n"));
-      geist_object_set_state(obj, DRAG);
-      gtk_object_set_data_full(GTK_OBJECT(mainwin), "drag", obj, NULL);
-      geist_object_raise(doc, obj);
-      doc->up =
-         imlib_update_append_rect(doc->up, obj->x, obj->y, obj->w, obj->h);
+
+      if ((event->state & GDK_SHIFT_MASK))
+      {
+         geist_object_toggle_state(obj, SELECTED);
+         D_RETURN(5, 1);
+      }
+      else if (!geist_object_get_state(obj, SELECTED))
+      {
+         geist_document_unselect_all(doc);
+         D(2, ("setting object state SELECTED\n"));
+         geist_object_set_state(obj, SELECTED);
+      }
+
+      list = geist_document_get_selected_list(doc);
+      for (l = list; l; l = l->next)
+      {
+         obj = GEIST_OBJECT(l->data);
+         obj->clicked_x = event->x - obj->x;
+         obj->clicked_y = event->y - obj->y;
+         D(2, ("setting object state DRAG\n"));
+         geist_object_set_state(obj, DRAG);
+         geist_object_raise(doc, obj);
+         doc->up =
+            imlib_update_append_rect(doc->up, obj->x, obj->y, obj->w, obj->h);
+      }
+      gtk_object_set_data_full(GTK_OBJECT(mainwin), "draglist", list, NULL);
       /* geist_document_render_updates(doc); */
       geist_document_render(doc);
       geist_document_render_selection(doc);
@@ -189,21 +205,30 @@ evbox_buttonpress_cb(GtkWidget * widget, GdkEventButton * event)
    D_RETURN(5, 1);
 }
 
-gint evbox_buttonrelease_cb(GtkWidget * widget, GdkEventButton * event)
+gint
+evbox_buttonrelease_cb(GtkWidget * widget, GdkEventButton * event)
 {
+   geist_list *list, *l;
    geist_object *obj;
 
    D_ENTER(5);
 
-   obj = geist_document_find_clicked_object(doc, event->x, event->y);
-   if (!obj)
-      D_RETURN(5, 1);
-   D(2, ("unsetting object state DRAG\n"));
-   geist_object_unset_state(obj, DRAG);
-   gtk_object_set_data_full(GTK_OBJECT(mainwin), "drag", NULL, NULL);
-   doc->up =
-      imlib_update_append_rect(doc->up, obj->x, obj->y, obj->w, obj->h);
-   /* geist_document_render_updates(doc); */
+   list = gtk_object_get_data(GTK_OBJECT(mainwin), "draglist");
+   if (list)
+   {
+      for (l = list; l; l = l->next)
+      {
+         obj = GEIST_OBJECT(l->data);
+
+         D(2, ("unsetting object state DRAG\n"));
+         geist_object_unset_state(obj, DRAG);
+         doc->up =
+            imlib_update_append_rect(doc->up, obj->x, obj->y, obj->w, obj->h);
+         /* geist_document_render_updates(doc); */
+      }
+   }
+   geist_list_free(list);
+   gtk_object_set_data_full(GTK_OBJECT(mainwin), "draglist", NULL, NULL);
    geist_document_render(doc);
    geist_document_render_selection(doc);
    geist_document_render_pmap(doc);
@@ -212,24 +237,26 @@ gint evbox_buttonrelease_cb(GtkWidget * widget, GdkEventButton * event)
    D_RETURN(5, 1);
 }
 
-gint
-evbox_mousemove_cb(GtkWidget * widget, GdkEventMotion * event)
+gint evbox_mousemove_cb(GtkWidget * widget, GdkEventMotion * event)
 {
+   geist_list *l, *list;
    geist_object *obj;
 
    D_ENTER(5);
 
-   obj = gtk_object_get_data(GTK_OBJECT(mainwin), "drag");
-   if (obj)
-   {
-      D(5, ("moving object to %f, %f\n", event->x, event->y));
-      doc->up =
-         imlib_update_append_rect(doc->up, obj->x, obj->y, obj->w, obj->h);
-      obj->x = event->x - obj->clicked_x;
-      obj->y = event->y - obj->clicked_y;
-      doc->up =
-         imlib_update_append_rect(doc->up, obj->x, obj->y, obj->w, obj->h);
-   }
+   list = gtk_object_get_data(GTK_OBJECT(mainwin), "draglist");
+   if (list)
+      for (l = list; l; l = l->next)
+      {
+         obj = GEIST_OBJECT(l->data);
+         D(5, ("moving object to %f, %f\n", event->x, event->y));
+         doc->up =
+            imlib_update_append_rect(doc->up, obj->x, obj->y, obj->w, obj->h);
+         obj->x = event->x - obj->clicked_x;
+         obj->y = event->y - obj->clicked_y;
+         doc->up =
+            imlib_update_append_rect(doc->up, obj->x, obj->y, obj->w, obj->h);
+      }
 
    D_RETURN(5, 1);
 }
