@@ -1,3 +1,8 @@
+Fri Aug  4 13:06:58 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>
+
+	* Multiple selections (using shift-click) and dragging of multiple
+	objects.
+
 Wed Aug  2 19:18:50 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>
 
 	* Object selection bounding boxes.
